@@ -69,9 +69,10 @@ my $uuid = new Data::UUID;
 my $msg = "attribute is set correctly";
 
 $coll = Redis::CappedCollection->create(
-    redis   => $redis,
-    name    => $uuid->create_str,
-    );
+    redis               => $redis,
+    name                => $uuid->create_str,
+    advance_cleanup_num => 0,
+);
 isa_ok( $coll, 'Redis::CappedCollection' );
 ok $coll->_server =~ /.+:$port$/, $msg;
 ok ref( $coll->_redis ) =~ /Redis/, $msg;
@@ -113,9 +114,10 @@ controlled_call( $method, "ID", ++$data_id, "Stuff" );
 
 # errors in the arguments
 $coll = Redis::CappedCollection->create(
-    redis   => $redis,
-    name    => $uuid->create_str,
-    );
+    redis               => $redis,
+    name                => $uuid->create_str,
+    advance_cleanup_num => 0,
+);
 isa_ok( $coll, 'Redis::CappedCollection' );
 ok $coll->_server =~ /.+:$port$/, $msg;
 ok ref( $coll->_redis ) =~ /Redis/, $msg;
@@ -195,9 +197,10 @@ $coll->_call_redis( "DEL", $_ ) foreach $coll->_call_redis( "KEYS", $NAMESPACE."
 
 # Remove old data
 $coll = Redis::CappedCollection->create(
-    redis   => $redis,
-    name    => $uuid->create_str,
-    );
+    redis               => $redis,
+    name                => $uuid->create_str,
+    advance_cleanup_num => 0,
+);
 isa_ok( $coll, 'Redis::CappedCollection' );
 ok $coll->_server =~ /.+:$port$/, $msg;
 ok ref( $coll->_redis ) =~ /Redis/, $msg;
@@ -218,9 +221,10 @@ $coll->_call_redis( "DEL", $_ ) foreach $coll->_call_redis( "KEYS", $NAMESPACE."
 
 #-------------------------------------------------------------------------------
 $coll = Redis::CappedCollection->create(
-    redis   => $redis,
-    name    => $uuid->create_str,
-    );
+    redis               => $redis,
+    name                => $uuid->create_str,
+    advance_cleanup_num => 0,
+);
 isa_ok( $coll, 'Redis::CappedCollection' );
 ok $coll->_server =~ /.+:$port$/, $msg;
 ok ref( $coll->_redis ) =~ /Redis/, $msg;
@@ -248,8 +252,9 @@ $coll->_call_redis( "DEL", $_ ) foreach $coll->_call_redis( "KEYS", $NAMESPACE."
 
 #-------------------------------------------------------------------------------
 $coll = Redis::CappedCollection->create(
-    redis   => $redis,
-    name    => $uuid->create_str,
+    redis               => $redis,
+    name                => $uuid->create_str,
+    advance_cleanup_num => 0,
 );
 isa_ok( $coll, 'Redis::CappedCollection' );
 
